Implementation of different class test