@@ -2,13 +2,19 @@ package com.openclassrooms.safetynet.controller;
 
 import com.openclassrooms.safetynet.dto.PersonDTO;
 import com.openclassrooms.safetynet.service.PersonService;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.mockito.junit.jupiter.MockitoSettings;
+import org.mockito.quality.Strictness;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.util.Arrays;
@@ -20,11 +26,17 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 
 @WebMvcTest(PersonController.class)
+@ExtendWith(MockitoExtension.class)
+@MockitoSettings(strictness = Strictness.LENIENT)
+@DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
+@TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 public class PersonControllerTest {
 
+    private static final Logger LOGGER = LoggerFactory.getLogger(PersonControllerTest.class);
     @Autowired
     private MockMvc mockMvc;
-    @MockBean
+    @MockitoBean
+    //@InjectMocks
     private PersonService personService;
     private PersonDTO mockPersonDTO;
 
@@ -38,12 +50,32 @@ public class PersonControllerTest {
         mockPersonDTO.setCity("San Francisco");
         mockPersonDTO.setZip("94200");
         mockPersonDTO.setPhone("1234567890");
+        LOGGER.info("@BeforeEach executes before the execution of every test method in this class");
+    }
+
+    @AfterEach
+    public void tearDownAfterEach() {
+        LOGGER.info("Running @AfterEach");
+        System.out.println();
+    }
+
+    @BeforeAll
+    static void setUpBeforeClass() {
+        LOGGER.info("@BeforeAll executes only once before all test methods execute in this class");
+        System.out.println();
+    }
+
+    @AfterAll
+    static void tearDownAfterAll() {
+        LOGGER.info("@AfterAll executes only once after all test methods execute in this class");
+        System.out.println();
     }
 
     @Test
+    @Order(1)
     public void getPersons_shouldReturnListOfPersons() throws Exception {
         // Mock data
-        List<PersonDTO> mockPersonList = Arrays.asList(mockPersonDTO);
+        List<PersonDTO> mockPersonList = List.of(mockPersonDTO);
         when(personService.getPersons()).thenReturn(mockPersonList);
 
         // Perform GET request
@@ -58,6 +90,7 @@ public class PersonControllerTest {
     }
 
     @Test
+    @Order(2)
     public void savePerson_shouldSaveAndReturnPerson() throws Exception {
         // Mock data
         when(personService.save(any(PersonDTO.class))).thenReturn(mockPersonDTO);
@@ -82,6 +115,7 @@ public class PersonControllerTest {
     }
 
     @Test
+    @Order(3)
     void deletePerson_shouldReturnSuccess() throws Exception {
         // Arrange
         String firstName = "John";
@@ -91,15 +125,13 @@ public class PersonControllerTest {
         when(personService.deleteByFullName(firstName, lastName)).thenReturn(true);
 
         // Act
-        mockMvc.perform(delete("/person")
+        mockMvc.perform(delete("/person/delete")
                         .param("firstName", firstName)
                         .param("lastName", lastName))
                 .andExpect(status().isOk());
 
         // Assert
-        verify(personService).deleteByFullName(firstName, lastName);
+        verify(personService, times(1)).deleteByFullName(firstName, lastName);
+
     }
-
-
-
 }
